Corrijiendo CitaVacunacion y Ciudadano | modificando fechaPropuesta